# Agentic-Governance-Fabric-AGF-

./: .gitignore  README.md  pyproject.toml  readme.md
Requested Submissions/: Deployed Link.rtf
Requested Submissions/Testing/Test case 1/: sample converstions.txt  test prompts.md
Testing/Test case 1/: DiagBot_dataset_metadata.txt  test prompts.md
deployment/: .env  deploy.py  test_deployment.py
eu_ai_act_auditor/: .env  __init__.py  agent.py  prompt.py
eu_ai_act_auditor/sub_agents/accuracy_robustness_security/: prompt.py
eu_ai_act_auditor/sub_agents/conformity_assessment/: prompt.py
eu_ai_act_auditor/sub_agents/human_oversight/: prompt.py
eu_ai_act_auditor/sub_agents/post_market_monitoring/: prompt.py
eu_ai_act_auditor/sub_agents/risk_management_monitoring/: prompt.py
eu_ai_act_auditor/sub_agents/technical_documentation/: prompt.py
